@@ -2,4 +2,6 @@
   EarthGman = "ff5bed33-ebbe-4dfa-b8fd-9cf90199fed0";
   PumpkinKing432 = "49e9ec7b-8821-4716-9d09-18dd6cdc0c98";
   Iron_Cutlass = "e1db1c6d-b576-41c3-984e-fbe9bd848171";
+  SargentSuk = "796f0c7f-5a88-40a4-9875-6a752cd5bdd0";
+  The1AndOnlyShrek = "01684230-e334-4ee6-872d-ef3408b1ba16";
 }
