@@ -1,3 +1,9 @@
+11-16-2024
+- lost the mc121 world while reinstalling (whoops)
+- DNS for all servers
+- add alts to blueprints whitelist
+
+
 11-15-2024
 - finished wireguard setup
 - enable DNS for servers routing through the tunnel
